--- a/InventoryManager/src/Home/Index.html
+++ b/InventoryManager/src/Home/Index.html
@@ -47,7 +47,7 @@
     
       <form id="myForm" class="row g-3 mt-3 p-2" onsubmit="myFunction(event)">
         <div class="row-auto">
-          <h3>Login</h3>
+          <h3>Login  Juan Ramon</h3>
         </div>
         <div class="col-auto">
           <input type="text"  class="form-control" id="inputEmail" placeholder="email@example.com">
