--- a/InventoryManager/src/Invoice/Invoice.html
+++ b/InventoryManager/src/Invoice/Invoice.html
@@ -30,40 +30,70 @@
 
 <table id="myTable">
   <tr class="header">
-    <th style="width:60%;">Name</th>
-    <th style="width:40%;">Country</th>
+    <th style="width:60%;">invoiceType</th>
+    <th style="width:40%;">invoiceStatus</th>
+    <th style="width:40%;">invoiceDate</th>
+    <th style="width:40%;">invoiceSubtotal</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
+    <td>Purchase Order</td>
+    <td>Bought</td>
+    <td>2022-07-15</td>
     <td>Germany</td>
   </tr>
   <tr>
-    <td>Berglunds snabbkop</td>
-    <td>Sweden</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Koniglich Essen</td>
+    <td>Purchase Order</td>
+    <td>Bought</td>
+    <td>2022-07-15</td>
     <td>Germany</td>
   </tr>
   <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Canada</td>
+    <td>Purchase Order</td>
+    <td>Pending</td>
+    <td>2022-10-15</td>
+    <td>Germany</td>
   </tr>
   <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Italy</td>
+    <td>Purchase Order</td>
+    <td>Pending</td>
+    <td>2022-10-15</td>
+    <td>Germany</td>
   </tr>
   <tr>
-    <td>North/South</td>
-    <td>UK</td>
+    <td>Purchase Order</td>
+    <td>Bought</td>
+    <td>2022-09-15</td>
+    <td>Germany</td>
   </tr>
   <tr>
-    <td>Paris specialites</td>
-    <td>France</td>
+    <td>Purchase Order</td>
+    <td>Bought</td>
+    <td>2022-09-15</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Purchase Order</td>
+    <td>Bought</td>
+    <td>2022-09-15</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Purchase Order</td>
+    <td>Bought</td>
+    <td>2022-09-15</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Purchase Order</td>
+    <td>Bought</td>
+    <td>2022-04-15</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Purchase Order</td>
+    <td>Bought</td>
+    <td>2022-03-15</td>
+    <td>Germany</td>
   </tr>
 </table>
 
