--- a/InventoryManager/src/Invoice/Invoice.html
+++ b/InventoryManager/src/Invoice/Invoice.html
@@ -30,70 +30,77 @@
 
 <table id="myTable">
   <tr class="header">
-    <th style="width:60%;">invoiceType</th>
-    <th style="width:40%;">invoiceStatus</th>
-    <th style="width:40%;">invoiceDate</th>
-    <th style="width:40%;">invoiceSubtotal</th>
+    <th style="width:25%;">invoiceType</th>
+    <th style="width:25%;">invoiceStatus</th>
+    <th style="width:20%;">invoiceDate</th>
+    <th style="width:20%;">invoiceSubtotal</th>
+    <th style="width:10%;">Action</th>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Bought</td>
     <td>2022-07-15</td>
-    <td>Germany</td>
+    <td>1339.004</td>
+    <td> 
+      <a href="#" class=""><i class="fa fa-file-text"></i></a>
+      <a href="#" ><i class="fa fa-trash"></i></a>
+      <a href="#" ><i class="fa fa-refresh"></i></a>
+
+    </td>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Bought</td>
     <td>2022-07-15</td>
-    <td>Germany</td>
+    <td>82.65</td>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Pending</td>
     <td>2022-10-15</td>
-    <td>Germany</td>
+    <td>86.96</td>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Pending</td>
     <td>2022-10-15</td>
-    <td>Germany</td>
+    <td>69.55</td>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Bought</td>
     <td>2022-09-15</td>
-    <td>Germany</td>
+    <td>765.55</td>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Bought</td>
     <td>2022-09-15</td>
-    <td>Germany</td>
+    <td>1305.00</td>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Bought</td>
     <td>2022-09-15</td>
-    <td>Germany</td>
+    <td>534.91</td>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Bought</td>
     <td>2022-09-15</td>
-    <td>Germany</td>
+    <td>165.30</td>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Bought</td>
     <td>2022-04-15</td>
-    <td>Germany</td>
+    <td>2609.95</td>
   </tr>
   <tr>
     <td>Purchase Order</td>
     <td>Bought</td>
     <td>2022-03-15</td>
-    <td>Germany</td>
+    <td>2892.65</td>
   </tr>
 </table>
 
