--- a/InventoryManager/src/Supplier/viewSupplier.html
+++ b/InventoryManager/src/Supplier/viewSupplier.html
@@ -25,19 +25,62 @@
 			</header>
 
 			<section>
-                                    <form>
-                                        <div>
-                                            <label for="street">*Street</label>
-                                            <input
-                                                id="street"
-                                                name="street"
-                                                placeholder="# Street St"
-                                                type="text"
-                                                required
-                                            />
-                                        </div>
-                                    </form>
 
+                <form action="https://webdevbasics.net/scripts/demo.php" method="post">
+                    <h2>View Supplier</h2>
+					<fieldset style="margin: 25px 5px;">
+						<legend>Business Information</legend>
+						<div class="two-col">
+							<div>
+								<label><strong>Name: </strong></label>
+								<label>OE Sypply</label>
+							</div>
+							<div>
+								<label><strong>Details: </strong></label>
+								<label>Battery and oil</label>
+							</div>
+                            <div>
+                                <label><strong>Email: </strong></label>
+								<label>supplier@oesupply.ca</label>
+							</div>
+							<div>
+								<label><strong>Telephone: </strong></label>
+                                <label>222-000-1555</label>
+							</div>
+                            <div>
+                                <label><strong>Extension: </strong></label>
+								<label>456</label>
+							</div>
+						</div>
+                        <br>
+					</fieldset>
+					<fieldset>
+						<legend>Address</legend>
+						<div class="two-col">
+							<div>
+								<label><strong>Street: </strong></label>
+                                <label>25 Glendale Ave.</label>
+							</div>
+                            <div>
+								<label><strong>City: </strong></label>
+                                <label>St. Catherines</label>
+							</div>
+                            <div>
+								<label><strong>City: </strong></label>
+                                <label>Ontario</label>
+							</div>
+                            <div>
+								<label><strong>Postal Code: </strong></label>
+                                <label>L1S1J2</label>
+							</div>
+						</div>
+                        <br>
+					</fieldset>
+					<div>
+                        <br/>
+                        <button type="button" class="btn btn-danger"> Delete </button>
+					</div>
+				</form>
 
 			</section>
 
