--- a/InventoryManager/src/Person table/ViewPerson.html
+++ b/InventoryManager/src/Person table/ViewPerson.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/PersonT.css">
     <script src="js/Global.js"></script>
     <script src="js/TablePerson.js"></script>
-    <title>List</title>
+    <title>Person List</title>
 </head>
 <body onload="globalData.initData(personTableF.loadTable);">
     <div include-html="./Menu.html"></div>
