Add global functions

--- a/InventoryManager/src/PersonTable/ViewPerson.html
+++ b/InventoryManager/src/PersonTable/ViewPerson.html
@@ -9,7 +9,7 @@
     <script src="js/TablePerson.js"></script>
     <title>Person List</title>
 </head>
-<body onload="globalData.initData(personTableF.loadTable);">
+<body onload="globalData.initData(personTableF.initTable);">
     <div include-html="./Menu.html"></div>
     <div>
         <div class="btn">
