--- a/InventoryManager/src/Person/IndexPerson.html
+++ b/InventoryManager/src/Person/IndexPerson.html
@@ -1,95 +1,52 @@
-<!DOCTYPE html>
-<html lang="en-US">
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/PersonT.css">
-    <title>Index Person</title>
-</head>
-
-<body>
-    <script src="TablePerson.js"></script>
-
-    <div>
-        <div class="btn">
-            <a href="NewPerson.html"><i></i>NewPerson</a>
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col">
+            <h2>Persons</h2>
         </div>
-        <h2>Search by name or department</h2>
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+        <div class="col">
+            <a href="./Main.html?page=newPerson">
+                <button type="submit" value="Submit"><i class="fa-solid fa-plus fa-lg"></i> New Person</button>
+            </a>
+        </div>
+        <div class="col-12">
+            <input type="text" id="myInput" onkeyup="personTableF.filerTable()" placeholder="Search person by..."
+            title="Type in an Text" />
+        </div>
     </div>
-    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by department"
-        title="Search by..">
     <table id="personTable">
-        <tr class="header">
-            <th>ID</th>
-            <th>Type</th>
-            <th>Department</th>
-            <th>Full Name</th>
-            <th style="width:150px;">Action</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>1</td>
-            <td>Sales</td>
-            <td>Wendy Salinas</td>
-            <td>
-                <a href="ViewPerson.html" class="block-action" ><i class="fa fa-pencil"></i></a>
-            </td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>1</td>
-            <td>Sales</td>
-            <td>William Barrios</td>
-            <td>
-                <a href="#" class="block-action"><i class="fa fa-pencil"></i></a>
-            </td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>1</td>
-            <td>Ordering and Purchasing</td>
-            <td>Sam Lopez</td>
-            <td>
-                <a href="#" class="block-action"><i class="fa fa-pencil"></i></a>
-            </td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>1</td>
-            <td>Mantainance</td>
-            <td>Eugene Herrera</td>
-            <td>
-                <a href="#" class="block-action"><i class="fa fa-pencil"></i></a>
-            </td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>1</td>
-            <td>Mantainance</td>
-            <td>Sarah Connors</td>
-            <td>
-                <a href="#" class="block-action"><i class="fa fa-pencil"></i></a>
-            </td>
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>1</td>
-            <td>Admin</td>
-            <td>Emily Galan</td>
-            <td>
-                <a href="#" class="block-action"><i class="fa fa-pencil"></i></a>
-            </td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>1</td>
-            <td>Corporative</td>
-            <td>Emma Valdez</td>
-            <td>
-                <a href="#" class="block-action"><i class="fa fa-pencil"></i></a>
-            </td>
-        </tr>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Type</th>
+                <th>Department</th>
+                <th>Full Name</th>
+                <th>Details</th>
+                <th>Address</th>
+                <th>Phone</th>
+                <th>Ext</th>
+                <th>email</th>
+                <th>Created</th>
+                <th style="width:150px;">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
     </table>
- </body>
-</html>
+    <script>
+        try {
+            mainF.configs;
+        } catch (error) {
+            window.location.href = "../Main/Main.html?page=persons";
+        }
+    </script>
+</div>
