--- a/InventoryManager/src/Person/IndexPerson.html
+++ b/InventoryManager/src/Person/IndexPerson.html
@@ -19,7 +19,7 @@
             </a>
         </div>
         <div class="col-12">
-            <input type="text" id="myInput" onkeyup="personTableF.filerTable()" placeholder="Search person by..."
+            <input type="text" id="myInput" onkeyup="personTableF.filterTable()" placeholder="Search person by..."
             title="Type in an Text" />
         </div>
     </div>
