--- a/InventoryManager/src/Person/IndexPerson.html
+++ b/InventoryManager/src/Person/IndexPerson.html
@@ -15,38 +15,46 @@
         </div>
         <div class="col">
             <a href="./Main.html?page=newPerson">
-                <button type="submit" value="Submit"><i class="fa-solid fa-plus fa-lg"></i> New Person</button>
+                <button title="New Person" type="submit" value="Submit"><i class="fa-solid fa-plus fa-lg"></i> New
+                    Person</button>
             </a>
         </div>
-        <div class="col-12">
+    </div>
+    <div class="container">
+        <div class="row align-items-center">
+        <div class="col-4"> </div>
+        <div class="col-4">
             <input type="text" id="myInput" onkeyup="personTableF.filterTable()" placeholder="Search person by..."
-            title="Type in an Text" />
+                title="Type in an Text" >       
+                <span id="icon">
+                    <i class="fas fa-search"></i>
+                </span>               
+        </div>
         </div>
     </div>
-    <table id="personTable">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Type</th>
-                <th>Department</th>
-                <th>Full Name</th>
-                <th>Details</th>
-                <th>Address</th>
-                <th>Phone</th>
-                <th>Ext</th>
-                <th>email</th>
-                <th>Created</th>
-                <th style="width:150px;">Action</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-    <script>
-        try {
-            mainF.configs;
-        } catch (error) {
-            window.location.href = "../Main/Main.html?page=persons";
-        }
-    </script>
+    <div class="col-4">
+    </div>
+
+</div>
+</div>
+<table id="personTable">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Type</th>
+            <th>Department</th>
+            <th>Full Name</th>
+            <th style="width:150px;">Action</th>
+        </tr>
+    </thead>
+    <tbody>
+    </tbody>
+</table>
+<script>
+    try {
+        mainF.configs;
+    } catch (error) {
+        window.location.href = "../Main/Main.html?page=persons";
+    }
+</script>
 </div>
