--- a/InventoryManager/src/Person/ViewPerson.html
+++ b/InventoryManager/src/Person/ViewPerson.html
@@ -164,7 +164,7 @@
                     </div>
                     <label class="viewData" data-bind="details"></label>
                     <select id="listDetail" name="listDept" data-bind="details" class="editData" hidden="true">
-                        <option value="">Details Person</option>
+                        <option value="">Select Details Person</option>
                         <option value="Cash Register 2">Cash Register 2</option>
                         <option value="Purchasing and Ordering Executive">Purchasing and Ordering Executive</option>
                         <option value="Administrative Assistant">Administrative Assistant</option>
