--- a/InventoryManager/src/Inventory/ViewInventory.html
+++ b/InventoryManager/src/Inventory/ViewInventory.html
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col">
                     <div>
-                        <label for="CreatedAt"><strong>*CreatedAt:</strong></label>
+                        <label for="Maximum"><strong>*Maximum:</strong></label>
                     </div>
                     <div>
                         <label class="viewData" data-bind="inventoryMaxStorage"></label>
