--- a/InventoryManager/src/Invoice/Invoice.html
+++ b/InventoryManager/src/Invoice/Invoice.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <div class="row align-items-center">
+  <div class="row align-items-center mb-5">
       <div class="col-4">
           <h2>Invoice</h2> 
       </div>
       <div class="col-4">
-          <div class="input-group mb-3">
+          <div class="input-group mt-3">
               <div class="input-group-prepend">
                   <span class="input-group-text"><i
                           class="fas fa-search"></i></span>
